--- a/challenge1/style.css
+++ b/challenge1/style.css
@@ -15,10 +15,11 @@ body {
   background-image: url(./assets/background-image.png);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center ;
   display: grid;
   place-content: center;
   height: 100vh;
-  width: 128rem;
+  width: 100vw;
 }
 
 #title {
